--- a/options.html
+++ b/options.html
@@ -16,10 +16,7 @@
                 <fieldset>
                     <legend id="fieldset_omnibox_legend" class="lang">Omnibox suggestions</legend>
                     <label id="language" for="lang" class="lang">Language</label>
-                    <select name="lang" id="lang">
-                        <option value="en">English</option>
-                        <option value="pl">Polski</option>
-                    </select>
+                    <input name="lang" id="lang"></input>
                 </fieldset>
 
                 <div id="buttons">
