--- a/options.html
+++ b/options.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <title id="options_title" class="lang"></title>
     <link rel="stylesheet" type="text/css" href="css/options.css" />
+    <script type="text/javascript" src="js/lang.js"></script>
     <script type="text/javascript" src="js/options.js"></script>
 </head>
 
@@ -25,6 +26,8 @@
                     <div style="clear:both"></div>
                 </div>
             </form>
+            <button id="update_langs">Click</button><i>&ensp;to update & show available languages!</i>
+            <p id="langs_list"></p>
         </div>
         <div id="push"></div>
     </div>
